--- a/web/index.html
+++ b/web/index.html
@@ -15,51 +15,30 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/webapp/">
+  <base href="$FLUTTER_BASE_HREF">
 
-  <meta charset=" UTF-8">
+  <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description"
+        content="User friendly multiplatform Therion map editor">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="mapiah">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <meta name="apple-mobile-web-app-title" content="Mapiah">
+  <link rel="apple-touch-icon" href="icons/m-256x156.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="16x16" href="icons/m-16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="icons/m-32x32.png">
   <link rel="icon" type="image/png" sizes="256x156" href="icons/m-256x156.png">
 
-
-  <title>mapiah</title>
+  <title>Mapiah</title>
   <link rel="manifest" href="manifest.json">
-
-  <script>
-    // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = null;
-  </script>
-  <!-- This script adds the flutter initialization JS code -->
-  <script src="flutter.js" defer></script>
 </head>
 
 <body>
-  <script>
-    window.addEventListener('load', function (ev) {
-      // Download main.dart.js
-      _flutter.loader.loadEntrypoint({
-        serviceWorker: {
-          serviceWorkerVersion: serviceWorkerVersion,
-        },
-        onEntrypointLoaded: function (engineInitializer) {
-          engineInitializer.initializeEngine().then(function (appRunner) {
-            appRunner.runApp();
-          });
-        }
-      });
-    });
-  </script>
+  <script src="flutter_bootstrap.js" async></script>
 </body>
 
 </html>
